--- a/FoodTracker_KL/Base.lproj/Main.storyboard
+++ b/FoodTracker_KL/Base.lproj/Main.storyboard
@@ -18,30 +18,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Hh-69-2b9">
-                                <rect key="frame" x="20" y="40" width="355" height="424.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Hh-69-2b9">
+                                <rect key="frame" x="20" y="40" width="355" height="438.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKD-y8-4C9">
-                                        <rect key="frame" x="0.0" y="0.0" width="86.5" height="20.5"/>
+                                        <rect key="frame" x="134.5" y="0.0" width="86.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Meal Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6To-PC-Yp5">
-                                        <rect key="frame" x="0.0" y="28.5" width="335" height="30"/>
+                                        <rect key="frame" x="20" y="28.5" width="315" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tOh-Ah-uxD">
-                                        <rect key="frame" x="0.0" y="66.5" width="151" height="30"/>
-                                        <state key="normal" title="Set Default Label Text"/>
-                                        <connections>
-                                            <action selector="setDefaultLabelText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iFl-Fu-kbx"/>
-                                        </connections>
-                                    </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" preservesSuperviewLayoutMargins="YES" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="XsK-6R-cde">
-                                        <rect key="frame" x="0.0" y="104.5" width="320" height="320"/>
+                                        <rect key="frame" x="17.5" y="66.5" width="320" height="320"/>
                                         <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="XsK-6R-cde" secondAttribute="height" multiplier="1:1" id="KtP-ED-rSk"/>
@@ -50,26 +43,25 @@
                                             <outletCollection property="gestureRecognizers" destination="Vuy-eA-Dgc" appends="YES" id="D1U-j2-3IG"/>
                                         </connections>
                                     </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qDY-JF-Z92" customClass="RatingControl" customModule="FoodTracker_KL" customModuleProvider="target">
+                                        <rect key="frame" x="51.5" y="394.5" width="252" height="44"/>
+                                    </stackView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="6To-PC-Yp5" secondAttribute="trailing" constant="20" id="moC-cx-fqF"/>
                                 </constraints>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qDY-JF-Z92" customClass="RatingControl" customModule="FoodTracker_KL" customModuleProvider="target">
-                                <rect key="frame" x="20" y="479" width="200" height="110"/>
-                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="qDY-JF-Z92" firstAttribute="top" secondItem="0Hh-69-2b9" secondAttribute="bottom" constant="14.5" id="3pr-OC-3p2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0Hh-69-2b9" secondAttribute="trailing" id="74W-MI-c1a"/>
                             <constraint firstItem="0Hh-69-2b9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="8lA-Sr-sJ8"/>
-                            <constraint firstItem="qDY-JF-Z92" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="NM8-CB-DcU"/>
                             <constraint firstItem="0Hh-69-2b9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="UdO-Kg-NFp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="RatingControl" destination="qDY-JF-Z92" id="1cc-ST-Q4a"/>
                         <outlet property="mealNameLabel" destination="eKD-y8-4C9" id="7FZ-rq-L5u"/>
                         <outlet property="nameTextField" destination="6To-PC-Yp5" id="PEp-99-jVJ"/>
                         <outlet property="photoImageView" destination="XsK-6R-cde" id="lFo-Dt-rkw"/>
