--- a/FoodTracker_KL/Base.lproj/Main.storyboard
+++ b/FoodTracker_KL/Base.lproj/Main.storyboard
@@ -47,6 +47,7 @@
                                     <outlet property="nameLabel" destination="QCV-OU-2Za" id="Sqg-ku-ahv"/>
                                     <outlet property="photoImageView" destination="w72-ml-wLB" id="TPN-DM-2se"/>
                                     <outlet property="ratingControl" destination="IlY-xP-dcv" id="IXo-ht-bfM"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ShowDetail" id="Tb0-PZ-6HM"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -55,13 +56,19 @@
                             <outlet property="delegate" destination="2ux-7e-5hI" id="thr-y3-WH2"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Your Meals" id="76T-1b-q8z"/>
+                    <navigationItem key="navigationItem" title="Your Meals" id="76T-1b-q8z">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="SU2-4Z-GlQ">
+                            <connections>
+                                <segue destination="ECt-Or-8sn" kind="show" identifier="AddItem" id="lyJ-5o-7xD"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cMJ-LT-cKr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="296.80000000000001" y="133.5832083958021"/>
         </scene>
-        <!--Meal View Controller-->
+        <!--New Meal-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MealViewController" customModule="FoodTracker_KL" customModuleProvider="target" sceneMemberID="viewController">
@@ -70,7 +77,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Hh-69-2b9">
-                                <rect key="frame" x="20" y="40" width="355" height="410"/>
+                                <rect key="frame" x="20" y="84" width="355" height="410"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Meal Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6To-PC-Yp5">
                                         <rect key="frame" x="20" y="0.0" width="315" height="30"/>
@@ -105,21 +112,35 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="New Meal" id="dj8-RA-Yms" userLabel="New Meal">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="1sG-I8-H0a">
+                            <connections>
+                                <action selector="cancel:" destination="BYZ-38-t0r" id="xOp-KQ-C1R"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="YiQ-7Z-fLW">
+                            <connections>
+                                <segue destination="B0o-cH-eYt" kind="unwind" unwindAction="unwindToMealListWithSender:" id="pR7-c4-Tgz"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="RatingControl" destination="qDY-JF-Z92" id="1cc-ST-Q4a"/>
                         <outlet property="nameTextField" destination="6To-PC-Yp5" id="PEp-99-jVJ"/>
                         <outlet property="photoImageView" destination="XsK-6R-cde" id="lFo-Dt-rkw"/>
                         <outlet property="ratingControl" destination="qDY-JF-Z92" id="Ix7-Bv-hpd"/>
+                        <outlet property="saveButton" destination="YiQ-7Z-fLW" id="ker-Mc-Z1h"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="B0o-cH-eYt" userLabel="Exit" sceneMemberID="exit"/>
                 <tapGestureRecognizer id="Vuy-eA-Dgc">
                     <connections>
                         <action selector="selectImageFromPhotoLibrary:" destination="BYZ-38-t0r" id="ktE-rr-WnI"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1072.8" y="133.5832083958021"/>
+            <point key="canvasLocation" x="2012" y="133.5832083958021"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ad4-WV-I9W">
@@ -139,8 +160,29 @@
             </objects>
             <point key="canvasLocation" x="-642.39999999999998" y="133.5832083958021"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZLk-o1-oBk">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ECt-Or-8sn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3eX-Gg-qAv">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ygl-Y2-dlT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JAV-QP-ytO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1137" y="500"/>
+        </scene>
     </scenes>
     <resources>
         <image name="defaultPhoto" width="427" height="285"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Tb0-PZ-6HM"/>
+    </inferredMetricsTieBreakers>
 </document>
